firs section branch

--- a/style.css
+++ b/style.css
@@ -32,6 +32,17 @@
 .reduce-icon {
   width: 1.25rem;
 }
+/* MacBook Pro style / First container  */
+
+.first-container {
+  background-color: #fafafa;
+  text-align: center;
+  padding: 1.56rem 0;
+}
+.main-title {
+  font-size: 3.5rem;
+  font-weight: 700;
+}
 
 /* description style */
 
